<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AR Furniture</string>
    <string name="ar_activity_name">Preview</string>
    <string name="sceneview_activity_name">Model Preview</string>
    <string name="buyer_fragment_name">Buy</string>
    <string name="seller_fragment_name">Sell</string>
    <string name="ar_button_content_description">AR Preview</string>
    <string name="item_image_buyer_content_description">Item Image</string>

    <string name="seller_fragment_title">Choose your furniture</string>
    <string name="category_icon_content_description">Category Icon</string>

    <string name="all">All</string>
    <string name="table">Table</string>
    <string name="chair">Chair</string>
    <string name="bed">Bed</string>
    <string name="sofa">Sofa</string>
    <string name="cabinet">Cabinet</string>
    <string name="others">Others</string>

    <string name="item_name_label">Name</string>
    <string name="item_description_label">Description</string>
    <string name="item_price_label">Price</string>
    <string name="ar_support_checkbox_text">Add AR Support</string>
    <string name="ar_support_button_text">Launch AR</string>
    <string name="submit">Submit</string>
    <string name="ar_support_label">Add AR Preview</string>
    <string name="ar_color_button_text">Choose Color</string>
    <string name="take_picture_button_text">Take Pictures</string>

    <string name="item_image_seller_content_description">Item Image</string>
    <string name="model_image_content_description">Model Thumbnail</string>
    <string name="model_preview_button_text">Check this model</string>

    <string name="SignIn">Sign In</string>
    <string name="SignUp">Sign Up</string>
    <string name="Email">"Enter email account"</string>
    <string name="Password">"Enter password"</string>
    <string name="SignUpLink">"New User? Register Here"</string>
    <string name="SignInLink">"Already have an account? Sign in Here"</string>

    <string-array name="category_array">
        <item>@string/all</item>
        <item>@string/table</item>
        <item>@string/chair</item>
        <item>@string/bed</item>
        <item>@string/sofa</item>
        <item>@string/cabinet</item>
        <item>@string/others</item>
    </string-array>

</resources>
