<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:padding="18dp">

    <TextView
        android:id="@+id/item_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_name_label" />

    <EditText
        android:id="@+id/item_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:inputType="text" />

    <TextView
        android:id="@+id/item_description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_description_label" />

    <EditText
        android:id="@+id/item_description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:inputType="text" />

    <TextView
        android:id="@+id/item_price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_price_label" />

    <EditText
        android:id="@+id/item_price_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:inputType="text" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:text="@string/submit" />

</LinearLayout>