<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="15dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="15dp"
    android:background="@drawable/background"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation = "vertical"
        android:layout_centerVertical="true"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="50dp"
            android:layout_gravity="center_horizontal"
            android:text="Furniture Trading Platform"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold">


        </TextView>

        <EditText
            android:id="@+id/SignUpEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_email_black_24dp"/>

        <EditText
            android:id="@+id/SignUpPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_keyboard_black_24dp"/>

        <Button
            android:id="@+id/SignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_gravity="right"
            android:text="@string/SignUp"
            />

        <TextView
            android:id="@+id/SignInLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/SignInLink"
            android:textSize="20dp" />

    </LinearLayout>
</RelativeLayout>